# wasm-project

./: .gitignore  Cargo.toml  init.sh  readme.md
pkg/: wasm.d.ts  wasm.js  wasm_bg.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
src/: lib.rs
www/: bootstrap.js  index.js  package-lock.json  package.json  webpack.config.js
www/public/: index.html
www/worker/: function.js
