[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.63"
wee_alloc = "0.4.5"
fast_image_resize = "2.4.0"
image = "0.24.5"
resize = "0.7.4"
rgb = "0.8.34"
reqwest = { version = "0.11", features = ["blocking"] }
try-catch = "0.2.2"
js-sys = "0.3.60"
web-sys = "0.3.60"
photon-rs = "0.3.1"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
